--- a/front/src/Cricket_market/T20.css
+++ b/front/src/Cricket_market/T20.css
@@ -56,7 +56,7 @@ html {
   justify-content: space-between;
   align-items: center;
   padding: 10px 15px;
-  background: linear-gradient(90deg, #1e3c72, #2a5298);
+  background: linear-gradient(90deg, #d0d8e77a, #fff);
   color: #fff;
   font-size: 14px;
   width: 100%;
